--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.Rproj.user
+
+# DOC added
+data-raw
+R/.DS_Store
+.DS_Store
+.Rbuildignore
