Overpass font now available within pkg

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ggquik
 Type: Package
 Title: Quick Plotting ggplot2 Wrapper
-Version: 0.1.0.3
+Version: 0.1.0.4
 Author: Don Chesworth
 Maintainer: Don Chesworth <dcheswor@redhat.com>
 Description: Using ggplot2, create quick bar, line, and bullet plots
@@ -11,6 +11,8 @@ Imports:
     data.table (>= 1.10.4),
     ggplot2 (>= 2.2.1.9000),
     cowplot (>= 0.7.0), 
+    showtext (>= 0.5),
+    sysfonts (>= 0.7.1),
     scales (>= 0.5.0)
 Depends: R(>= 2.10)
 RoxygenNote: 5.0.1
