--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,10 +21,13 @@ export(quiksave)
 export(redhat_colors)
 export(set_decimal)
 export(set_group_colors)
+export(set_quik_family)
 export(show_redhat_colors)
 export(use_limits)
 import(ggplot2)
 import(graphics)
+import(showtext)
+import(sysfonts)
 importFrom(data.table,":=")
 importFrom(data.table,CJ)
 importFrom(data.table,data.table)
