allow one bar/line/point, removed quiksave

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,11 +19,11 @@ export(quik_points)
 export(quik_prepare)
 export(quik_theme)
 export(quik_transparent)
-export(quiksave)
 export(redhat_colors)
 export(set_decimal)
 export(set_group_colors)
 export(set_quik_family)
+export(set_quik_opts)
 export(show_redhat_colors)
 export(use_limits)
 import(ggplot2)
