width in add_backbar, vertical adjustment and fixed line_group error in add_backtext

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(quik_prepare)
 export(quik_theme)
 export(quik_transparent)
 export(redhat_colors)
+export(redhat_hex)
 export(set_decimal)
 export(set_group_colors)
 export(set_quik_family)
