--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,4 +39,5 @@ importFrom(data.table,data.table)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setorderv)
 importFrom(grDevices,col2rgb)
+importFrom(grDevices,rgb)
 importFrom(stats,as.formula)
